fix vh issue on mobile screen

--- a/src/scss/components/slide.scss
+++ b/src/scss/components/slide.scss
@@ -1,6 +1,7 @@
 .slide {
     position: absolute;
     height: 100vh;
+    height: 100dvh;
     width: 100vw;
     z-index: 2000;
     top: 0;
